--- a/src/content/blog/LifeLoggerz-Q-and-A.mdx
+++ b/src/content/blog/LifeLoggerz-Q-and-A.mdx
@@ -3,7 +3,7 @@ title: "LifeLoggerz Q&A — Tracking Life, One Cell at a Time"
 pubDate: "2025-10-09"
 description: "Common questions about how I track my life daily using Google Sheets, why I do it, and what I’ve learned from years of logging data."
 tags: ["LifeLoggerz", "Google Sheets", "Data Tracking", "Self-Improvement"]
-heroImage: "/images/trophy_shelf.png"
+heroImage: "/images/about-lifeloggerz.gif"
 draft: false             
 ---
 
