--- a/src/content/blog/efficiencyroutinehabits.mdx
+++ b/src/content/blog/efficiencyroutinehabits.mdx
@@ -2,7 +2,7 @@
 title: "Efficiency in My Routine and Habits"
 description: "A data-backed breakdown of how I optimize routines, remove time sinks, and structure my life for focus and productivity — including comparisons, habits, time audits, routine optimization, and efficiency strategies used in my minimalist, discipline-driven lifestyle as a PhD student."
 pubDate: "2025-09-19"
-heroImage: "/images/trophy-shelf.png"
+heroImage: "/images/trophy_shelf.png"
 ---
 # Efficiency in My Routine and Habits
 
