--- a/src/content/blog/LifeLoggerz-Q-and-A.mdx
+++ b/src/content/blog/LifeLoggerz-Q-and-A.mdx
@@ -58,12 +58,12 @@ I personally prefer to see what meaningful things occupy my time. Wasted time is
 
 ---
 
-## 📄 Can I have your template?
+## 📄 Can I have your templates?
 
 Absolutely.  
 
 The **LifeLoggerz Templates** are **free** to download.  
-It’s simple, clean, and works best in **Google Sheets** (you can migrate it to Excel if you wish).
+They're simple, clean, and the spreadsheet ones work best in **Google Sheets** (you can migrate it to Excel if you wish).
 
 You can:
 - Delete sheets you don’t need (e.g., *Blunders* → add *Mood* or *Calories* instead)
