--- a/src/content/blog/art.mdx
+++ b/src/content/blog/art.mdx
@@ -3,7 +3,7 @@ title: "The DailyArt Challenge — One Artwork a Day for Life"
 pubDate: "2025-10-27"
 description: "How I built a lifelong habit of seeing one artwork a day — powered by Google Sheets, the DailyArt app, and a touch of automation."
 tags: ["LifeLoggerz", "DailyArt", "Google Sheets", "Habits", "Culture"]
-heroImage: "/images/efficiency_is_everything.png"
+heroImage: "/images/art.png"
 draft: false
 ---
 
