--- a/src/content/blog/guitar.mdx
+++ b/src/content/blog/guitar.mdx
@@ -3,7 +3,8 @@ title: "Flamenco at My Fingertips — Growing One Strum at a Time"
 pubDate: "2025-10-27"
 description: "From zero to rasgueado: how daily practice and consistency have turned my free hours into music. A data-driven look at building skill and joy through guitar."
 tags: ["LifeLoggerz", "Guitar", "Flamenco", "Consistency", "Self-Improvement"]
-heroImage: "/videos/guitar.mp4"
+heroImage: "/images/guitar-hero.png"
+heroVideo: "/videos/guitar.mp4"
 draft: false
 ---
 
