--- a/src/content/blog/cheapblog.mdx
+++ b/src/content/blog/cheapblog.mdx
@@ -3,7 +3,7 @@ title: "This Blog Only Costs $10 a Year — How I Built a Fully Custom Static Si
 pubDate: "2025-11-20"
 description: "A transparent walkthrough of how I built LifeLoggerz using a $10/year tech stack — and why simplicity doesn’t have to mean limitation."
 tags: ["Astro", "Web Development", "GitHub Pages", "Cloudflare", "Static Sites", "LifeLoggerz"]
-heroImage: "/images/your-hero-image.png"
+heroImage: "/images/blogface.png"
 draft: false
 ---
 
