--- a/src/content/blog/acdprojecthospital.mdx
+++ b/src/content/blog/acdprojecthospital.mdx
@@ -3,7 +3,7 @@ title: "3-Story Hospital Opening in Kerrville, TX — Is it Structurally Sound?"
 pubDate: "2025-10-27"
 description: "Our three-story hospital concept for Kerrville, TX: layout, loads, analysis strategy, and a hand-designed concrete corbel supporting a precast beam."
 tags: ["Structural Engineering", "Concrete", "RISA", "ETABS", "ACI 318", "Hospitals", "Corbels"]
-heroImage: "/images/hospital.jpeg"
+heroImage: "/images/hospital.jpg"
 draft: false
 ---
 
